samplek8s/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-eureka-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-eureka-service
  template:
    metadata:
      labels:
        app: iot-eureka-service
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: iot-eureka-service
        image: elec555/iot-eureka-svc-2
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: iot-eureka-service
  namespace: default
spec:
  selector:
    app: iot-eureka-service
  ports:
  - name: http-8761 # Add a proper name with protocol prefix
    port: 80
    targetPort: 8761
