samplek8s/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-service
  template:
    metadata:
      labels:
        app: oauth-service
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: oauth-service
        image: elec555/microservicestelelecro:oauth
        ports:
        - containerPort: 9081
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
  namespace: default
spec:
  selector:
    app: oauth-service
  ports:
  - name: http-9081 # Add a proper name with protocol prefix
    port: 80
    targetPort: 9081
